--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mdi/js": "^7.4.47",
+    "clipboard": "^2.0.11",
     "hammerjs": "^2.0.8",
     "marked": "^16.1.2",
     "vue": "^3.5.17",
