--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-# Logs
 logs
 *.log
 npm-debug.log*
@@ -6,18 +5,13 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
 node_modules
 dist
 dist-ssr
 *.local
-
-# Env
 .env
 .env.test
 .env.production
-
-# Editor directories and files
 .vscode/*
 !.vscode/extensions.json
 .idea
@@ -28,9 +22,7 @@ dist-ssr
 *.sln
 *.sw?
 desktop.ini
-
-# don't ask.
 _about
-
 *.db
 *.pyc
+__pycache__
